1.0.3
-----------------
Fixed a notice in SQLIImportFactory::cleanup()
Fixed issue with section assignement on new sqli content object - http://bit.ly/aD8O61

1.0.2
-----------------
Fixed issue : Exception thrown when setting a RobotUserID

1.0.1
-----------------
Fixed issue : Content creation with non-default language - http://bit.ly/9iNxyb
Fixed issue : Parent location doesn't update in publisher
Implemented "defaultLocation" in SQLIContent. You can now get the default location, corresponding to content 'main_node' : $defaultLocation = $sqliContent->defaultLocation; // returns SQLILocation

1.0
-----------------
Initial release